<resources>
    <string name="app_name">Peso Sense</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="title_activity_peso">PesoActivity</string>
    <string name="title_activity_splashscreen">Peso Sense</string>
    <string name="title_activity_login">Login</string>

    <string-array name="nav_item_thin">
        <item>CFO Newsfeeds</item>
        <item>Financial Tips</item>
        <item>#Financial Literacy Challenge</item>
        <item>Settings</item>
    </string-array>

    <string-array name="nav_item_rich">
        <item>Feeds</item>
        <item>Shop</item>
        <item>Payments</item>
        <item>Remittance</item>
        <item>Settings</item>

    </string-array>

    <array name="nav_icons_thin">
        <item>@drawable/selector_feeds</item>
        <item>@drawable/check_icon_hover</item>
        <item>@drawable/selector_bills</item>
        <item>@drawable/selector_settings</item>
    </array>

    <array name="nav_icons_rich">
        <item>@drawable/selector_feeds</item>
        <item>@drawable/selector_shop</item>
        <item>@drawable/selector_bills</item>
        <item>@drawable/selector_remittance</item>
        <item>@drawable/selector_settings</item>

    </array>

    <array name="nav_icons_rich_selected">
        <item>@drawable/ic_feeds_selected</item>
        <item>@drawable/ic_shop_selected</item>
        <item>@drawable/ic_bills_selected</item>
        <item>@drawable/ic_remittance_selected</item>
        <item>@drawable/ic_settings_selected</item>
        <item>@drawable/ic_settings_selected</item>

    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_app_guide">AppGuide</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
    </string-array>
    <string name="title_activity_signup">Signup</string>

    <string name="rem_date">Sample Date</string>
    <string name="rem_type">Sample type</string>
    <string name="rem_content">Sample Content</string>

    <string name="fab">+</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="add_new_item_title">ADD NEW ITEM</string>
    <string name="btn_add_new_item">+ ADD</string>
    <string name="lbl_date">Date</string>
    <string name="txt_date">Edit date...</string>
    <string name="lbl_title">Title</string>
    <string name="txt_title">Edit title...</string>
    <string name="lbl_message">Message</string>
    <string name="txt_message">Edit message...</string>
    <string name="btn_update_item">UPDATE</string>
    <string name="update_item_title">Update Remittance Details</string>
    <string name="title_activity_government_payment">GovernmentPayment</string>


    <string name="facebook_app_id">734293950049753</string>
    <string name="title_activity_shop_item_view">ShopItemView</string>
    <string name="title_activity_reset_password">ResetPassword</string>

    <string name="check_email">We sent to your email the verification to reset your password. Please check your inbox</string>
    <!--
    //Thin
CFO Newsfeeds
Financial Tips
#Financial Literacy Challenge
Settings

// RICH
CFO Newsfeeds
Celebrity #PesoSense Tips
Targeted Financial Tips
#PesoSense
Online Shop
Bills
Remit
Partner Promos
Settings
    -->
</resources>
