<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="#e2e2e2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_item_title"
            android:textStyle="bold"
            android:textSize="18dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_date"
                android:textStyle="bold"
                android:layout_marginRight="10dp" />
            
            <EditText
                android:id="@+id/txt_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_date"
                android:background="@drawable/multiline"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_title"
                android:textStyle="bold"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/txt_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_title"
                android:background="@drawable/multiline"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_message"
                android:textStyle="bold"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/txt_message"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_message"
                android:singleLine="false"
                android:inputType="textMultiLine"
                android:textAlignment="gravity"
                android:gravity="top"
                android:background="@drawable/multiline"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#63C0EC"
        android:textColor="#fff"
        android:text="@string/btn_add_new_item"/>


</LinearLayout>